# GFJunctions

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/Data/: Ability.cpp  Ability.h  Character.cpp  Character.h  CharacterBase.cpp  CharacterBase.h  GameState.cpp  GameState.h  GuardianForce.cpp  GuardianForce.h  Junction.cpp  Junction.h  JunctionSetup.cpp  JunctionSetup.h  Requirement.cpp  Requirement.h  Role.cpp  Role.h
src/Service/: GameStateManager.cpp  GameStateManager.h  PersistenceManager.cpp  PersistenceManager.h
test/: CMakeLists.txt  TestCase.cpp
